--- a/style_cr.css
+++ b/style_cr.css
@@ -184,7 +184,7 @@ body {
 .hero-section{
     margin-top:100px;
     padding:20px;
-    background-image: url(hero_cr.jpg);
+    background-image: url(img/hero_cr.jpg);
     height:280px;
     background-size: cover;
     background-repeat: no-repeat;
