--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ body {
 .hero-section{
     margin-top:100px;
     padding:20px;
-    background-image:url(hero_image.jpg);
+    background-image:url(img/hero_image.jpg);
     height:280px;
     background-size: cover;
     display:flex;
