--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 }
 
 .logo{
-    background-image: url("amazon_logo.png");
+    background-image: url("img/amazon_logo.png");
     background-size: cover;
     height: 50px;
     width: 100%;
