--- a/style_cr.css
+++ b/style_cr.css
@@ -36,7 +36,7 @@ body {
 }
 
 .logo{
-    background-image: url("amazon_logo.png");
+    background-image: url("img/amazon_logo.png");
     background-size: cover;
     height: 50px;
     width: 100%;
