--- a/style_cr.css
+++ b/style_cr.css
@@ -14,7 +14,7 @@
 body {
     height: 100vh;
     margin: 0;
-    overflow-y: auto; /* Enable vertical scrolling */
+    overflow-y: auto; 
 }
 /* Navigation bar  */
 .navbar{
